Style bug fix - dark mode not work ...

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 /* This is dark mode setup */
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
   }
 }
 
